--- a/public/style.css
+++ b/public/style.css
@@ -35,12 +35,12 @@ body {
   border-bottom: 1px solid rgb(163, 255, 0);
 }
 
-.commands {
+#commands {
   list-style-type: none;
   padding-left: 15px;
 }
 
-.commands li:before {
+#commands li:before {
   content: '- ';
 }
 
@@ -85,6 +85,7 @@ item {
 
 #input {
   position: relative;
+  margin-bottom: 20px;
 }
 
 /* #input .dropdown-menu {
