--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,16 @@ body {
   overflow: auto;
 }
 
+#autotype-container {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
+#autotype {
+  width: 100%;
+}
+
 .user-tag {
   background: #454545;
 }
